--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-peikoff_objectivism/objectivism.*
+peikoff_objectivism/object*
 !peikoff_objectivism/objectivism.pdf
 !peikoff_objectivism/objectivism.html
 
